# Skepsi-Backend

./: .env  .gitignore  Procfile  db.sqlite3  dump.rdb  manage.py  new-requirements.txt  old_requirements.txt  pyproject.toml  requirements.txt
skepsi_app/: admin.py  apps.py  auth0.py  finn.py  models.py  schemas.py  tasks.py  views.py
skepsi_app/algorithms/: zero_shot_classification.py
skepsi_app/migrations/: 0001_initial.py  0002_auto_20210615_1632.py  0002_auto_20210729_1537.py  0002_auto_20210803_0047.py  0003_annotation_ai_data.py  0003_annotation_userisscientist.py  0003_auto_20210803_0057.py  0004_auto_20210617_2243.py  0004_auto_20210803_2244.py  0005_auto_20210622_1934.py  0005_paper_journal.py  0006_paper_doi.py  0006_remove_annotation_paper.py  0007_auto_20210622_1959.py  0007_auto_20210810_2125.py  0008_paper_topic.py  0008_table.py  0009_auto_20210818_1842.py  0009_topic_slug.py  0010_auto_20210623_2310.py  0010_auto_20210818_1932.py  0011_auto_20210625_1745.py  0012_auto_20210628_1913.py  0013_auto_20210628_2107.py  0014_annotation_position.py  0015_auto_20210630_2029.py  0016_paper_md.py  0017_auto_20210702_2321.py  0018_auto_20210702_2348.py  0019_reference_paperorder.py  0020_reference_title.py  0021_auto_20210703_0007.py  0022_auto_20210703_0010.py  0023_auto_20210703_0011.py  0024_auto_20210703_0017.py  0025_paper_abstract.py  0026_paper_created_date.py  0027_score.py  0028_auto_20210708_1542.py  0029_auto_20210708_1721.py  (+13 more)
skepsi_backend/: .env  __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
